--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,13 @@ footer.footer {
   text-transform: uppercase;
   letter-spacing: 4px; }
 
+.h-4 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  display: inline-block;
+  font-weight: bold; }
+
 .text {
   display: inline-flex;
   flex-direction: column;
@@ -139,25 +146,34 @@ footer.footer {
     font-weight: bold; }
 
 .u-center-text {
-  text-align: center; }
+  text-align: center !important; }
 
 .u-width-medium {
-  width: 30rem; }
+  width: 30rem !important; }
 
 .u-text-block {
-  display: block; }
+  display: block !important; }
 
 .u-section-title {
-  padding: 5rem; }
+  padding: 5rem !important; }
 
 .u-left-padding-zero {
-  padding-left: 0; }
+  padding-left: 0 !important; }
 
 .u-padding-top-med {
-  padding-top: 5rem; }
+  padding-top: 5rem !important; }
 
 .u-padding-bottom-med {
-  padding-bottom: 15rem; }
+  padding-bottom: 15rem !important; }
+
+.u-padding-top-btm-med {
+  padding: 5rem 0 !important; }
+
+.u-ff-helvetica {
+  font-family: 'helvetica' !important;
+  letter-spacing: 1px !important;
+  font-weight: 400 !important;
+  font-size: 1.8rem !important; }
 
 @keyframes spin {
   0% {
@@ -182,11 +198,13 @@ footer.footer {
     left: 0; }
   .header__overflow-container {
     overflow: hidden; }
-  .header__green-wave {
+  s
+.header__green-wave {
     height: auto;
     width: 100%;
     transform: translateY(7%); }
-    .header__green-wave--container {
+    s
+.header__green-wave--container {
       position: absolute;
       width: 100%;
       bottom: 0;
@@ -341,7 +359,8 @@ footer.footer {
     transform: translateY(-20%); }
   .section-projects .gallery {
     margin: 0 auto;
-    padding-bottom: 7rem; }
+    padding-bottom: 7rem;
+    width: 140rem; }
   .section-projects .gallery__item--1 {
     grid-column: start / col 3;
     grid-row: 1 / 7; }
@@ -411,6 +430,55 @@ footer.footer {
   padding: 16rem 0 0 0; }
   .section-form .form {
     margin-top: -3rem; }
+
+.case-studies .header {
+  padding-top: 5rem;
+  padding-bottom: 0px; }
+
+.study-content__main .paragraph__content {
+  line-height: 160%; }
+
+.section-brief {
+  padding: 10rem 15rem;
+  background-color: #FFF7E1; }
+
+.section-testimonial {
+  background-color: #FFF7E1;
+  padding: 10rem 25rem; }
+
+.section-separator {
+  padding: 10rem 15rem;
+  background-color: #FFF7E1; }
+
+.section-case-study-gallery {
+  background-color: #FFF7E1;
+  padding: 0 10rem; }
+
+.view-more-projects-section {
+  position: relative;
+  background-color: #00A979; }
+  .view-more-projects-section__button {
+    transition: background-color .2s; }
+    .view-more-projects-section__button.button {
+      padding: 0.7rem 2.6rem; }
+    .view-more-projects-section__button .button__text {
+      font-size: 2rem;
+      letter-spacing: 4px; }
+    .view-more-projects-section__button:hover {
+      background-color: #2f2c96; }
+  .view-more-projects-section__wave {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    transform: translateY(99%); }
+
+.portfolio .header {
+  position: relative;
+  background-color: #00A979;
+  padding-top: 5rem;
+  padding-bottom: 0px; }
 
 .button {
   border-radius: 50px;
@@ -529,8 +597,7 @@ footer.footer {
   grid-template-columns: [start] repeat(7, [col] 1fr [col]) [end];
   grid-template-rows: repeat(12, 3rem);
   grid-row-gap: 4.5rem;
-  grid-column-gap: 4rem;
-  width: 140rem; }
+  grid-column-gap: 4rem; }
   .gallery__item {
     position: relative; }
   .gallery__description {
@@ -722,3 +789,119 @@ footer.footer {
     .form__button:disabled {
       cursor: default;
       opacity: 50%; }
+
+.study-content {
+  display: flex;
+  flex-direction: row; }
+  .study-content__side {
+    min-width: 15%;
+    flex-direction: column; }
+  .study-content__side .study-content__item:not(:last-child) {
+    padding-bottom: 6rem; }
+  .study-content__main {
+    flex-grow: 1;
+    flex-direction: column;
+    margin-left: 20rem; }
+  .study-content__main .study-content__item:not(:last-child) {
+    padding-bottom: 7rem; }
+
+.paragraph {
+  color: #232427; }
+  .paragraph__title {
+    display: inline-block;
+    width: 100%;
+    font-size: 2rem;
+    letter-spacing: 4px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-bottom: 1rem; }
+  .paragraph__content {
+    display: inline-block;
+    font-size: 1.6rem;
+    letter-spacing: 2px; }
+    .paragraph__content:not(:last-child) {
+      padding-bottom: 2rem; }
+
+.quote {
+  position: relative;
+  background-color: #00A979;
+  color: #FFF;
+  padding: 0 2rem; }
+  .quote__title, .quote__quotee {
+    display: inline-block;
+    width: 100%;
+    text-transform: uppercase;
+    text-align: center; }
+  .quote__title {
+    font-size: 6.1rem;
+    letter-spacing: 4px; }
+  .quote__quotee {
+    font-size: 4rem;
+    letter-spacing: 4px;
+    padding-top: 1rem; }
+  .quote__row {
+    padding-bottom: 1.8rem;
+    text-align: center; }
+  .quote__text {
+    display: inline-block;
+    width: 90%;
+    font-size: 2.8rem;
+    font-family: 'Helvetica';
+    line-height: 132%;
+    margin: 0 auto; }
+    .quote__text--center {
+      text-align: center; }
+  .quote__open-quote, .quote__close-quote {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 12rem;
+    height: 12rem; }
+  .quote__open-quote {
+    top: -15%;
+    left: 7%;
+    background-image: url(../../img/svg/quote-open.svg); }
+  .quote__close-quote {
+    bottom: -15%;
+    right: 7%;
+    background-image: url(../../img/svg/quote-close.svg); }
+
+.case-study {
+  background-image: url(../../img/case-studies/bg-case-study-orange-wave.svg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 13rem; }
+  .case-study__cover {
+    height: 65vh;
+    position: relative;
+    background-color: green; }
+  .case-study__arrow-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%); }
+    .case-study__arrow-container--left {
+      left: 0%; }
+    .case-study__arrow-container--right {
+      right: 0%; }
+    .case-study__arrow-container:hover {
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.219), rgba(0, 0, 0, 0.219));
+      cursor: pointer; }
+  .case-study__triangle {
+    transform: translateY(-70%);
+    text-align: center;
+    margin-bottom: -4%; }
+  .case-study__description {
+    text-align: center; }
+  .case-study__study-heading {
+    font-size: 2.6rem;
+    text-transform: uppercase;
+    color: #FFF7E1;
+    display: inline-block;
+    letter-spacing: 3px; }
