--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -19,6 +19,7 @@
     & .gallery{
         margin:0 auto; 
         padding-bottom:7rem;
+        width:140rem;
     }
     & .gallery__item{
        &--1{
