--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -30,6 +30,7 @@ $text-small-med-med:1.6rem;
 $text-small-med-med-med: 1.8rem;
 //used on - navigation; footer__link&__text; gallery__description; section-projects__button; content-items__description
 $text-small:2rem;
+$text-small-big:2.2rem;
 //used on - text--main; offerings_link
 $text-med-small:2.4rem;
 //used on - case study heading; 
@@ -40,6 +41,7 @@ $text-med:2.8rem;
 
 $text-h1: 7rem;
 $text-h2-sm:4rem;
+$tex-h2:5rem;
 $text-h1-sm: 6.1rem;
  
 $z-default-layer:0;
