--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,5 +29,6 @@
 @import './components/_study-content.scss';
 @import './components/_paragraph.scss';
 @import './components/_quote.scss';
+@import './components/_page-notch.scss'; 
 
 @import './components/_case-study.scss';
