--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ footer.footer {
   position: relative;
   background-color: #00A979;
   padding-top: 5rem;
-  padding-bottom: 0px; }
+  padding-bottom: 5rem; }
 
 .button {
   border-radius: 50px;
@@ -866,6 +866,35 @@ footer.footer {
     bottom: -15%;
     right: 7%;
     background-image: url(../../img/svg/quote-close.svg); }
+
+.page-notch {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 20%;
+  padding-bottom: 2rem;
+  background-color: inherit;
+  border-radius: 0 0 30px 30px;
+  text-align: center;
+  transform: translate(-50%, 50%); }
+  .page-notch__content {
+    color: #232427;
+    display: inline-block; }
+  .page-notch__heading {
+    display: inline-block;
+    text-align: center;
+    font-size: 5rem;
+    text-transform: uppercase;
+    letter-spacing: 8px;
+    padding-left: 8px;
+    width: 100%; }
+  .page-notch__sub-text {
+    display: inline-block;
+    text-align: center;
+    font-size: 2.2rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    width: 100%; }
 
 .case-study {
   background-image: url(../../img/case-studies/bg-case-study-orange-wave.svg);
