--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -4,6 +4,6 @@
         position:relative;
         background-color: $color-green;
         padding-top:5rem;
-        padding-bottom:0px;
+        padding-bottom:5rem;
     }
 }
