--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,5 +30,6 @@
 @import './components/_paragraph.scss';
 @import './components/_quote.scss';
 @import './components/_page-notch.scss'; 
+@import './components/_zigzag-container.scss';
 
 @import './components/_case-study.scss';
