--- a/sass/components/_page-notch.scss
+++ b/sass/components/_page-notch.scss
@@ -7,6 +7,7 @@
     background-color: inherit;
     border-radius: 0 0 30px 30px;
     text-align: center;
+    z-index: $z-background-layer;
     transform:translate(-50%,50%);
     &__content{
         color:$color-black;
