--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -6,4 +6,10 @@
         padding-top:5rem;
         padding-bottom:5rem;
     }
+
+    .section-projects{
+        position:relative;
+        padding:10rem 15rem;
+        padding-top:20rem;
+    }
 }
