--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -22,6 +22,9 @@
 .u-padding-top-btm-med{
     padding:5rem 0 !important;
 }
+.u-padding-top-btm-lg{
+    padding:15rem 0 !important;
+}
 .u-ff-helvetica{
     font-family: 'helvetica' !important;
     letter-spacing: 1px !important;
