--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,9 @@
 .u-center-text{
     text-align: center !important;
 }
+.u-left-text{
+    text-align: start !important;
+}
 .u-width-medium{
     width:30rem !important;
 }
@@ -15,6 +18,9 @@
 }
 .u-padding-top-med{
     padding-top: 5rem !important;
+}
+.u-padding-bottom-sm{
+    padding-bottom:5rem !important;
 }
 .u-padding-bottom-med{
     padding-bottom: 15rem !important;
