--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,30 @@ footer.footer {
     letter-spacing: 3.6px;
     font-weight: bold; }
 
+.text-normal {
+  display: inline-block; }
+  .text-normal--title {
+    display: inline-block;
+    width: 100%;
+    font-weight: 600;
+    letter-spacing: 6px;
+    padding-bottom: 1rem;
+    font-size: 5rem;
+    text-transform: uppercase; }
+  .text-normal--description {
+    display: inline-block;
+    font-family: 'Helvetica';
+    text-transform: none;
+    line-height: 150%;
+    font-size: 1.8rem;
+    max-width: 70rem;
+    margin: 0 auto; }
+
 .u-center-text {
   text-align: center !important; }
+
+.u-left-text {
+  text-align: start !important; }
 
 .u-width-medium {
   width: 30rem !important; }
@@ -162,6 +184,9 @@ footer.footer {
 
 .u-padding-top-med {
   padding-top: 5rem !important; }
+
+.u-padding-bottom-sm {
+  padding-bottom: 5rem !important; }
 
 .u-padding-bottom-med {
   padding-bottom: 15rem !important; }
@@ -526,6 +551,57 @@ footer.footer {
     object-position: bottom;
     margin-bottom: 6rem; }
 
+.services__header-wave {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1; }
+
+.services .header {
+  position: relative;
+  padding: 5rem 10rem 15rem 10rem;
+  z-index: 20; }
+  .services .header .navigation__link {
+    color: #FFF; }
+    .services .header .navigation__link:hover {
+      color: #fa492d; }
+  .services .header .menu {
+    align-items: center; }
+
+.services .section-services {
+  background-color: #FFF7E1;
+  padding-top: 3.7rem;
+  padding-bottom: 20rem; }
+  .services .section-services .logos {
+    margin-top: 12rem;
+    text-align: end; }
+  .services .section-services .zigzag-container {
+    padding-right: 8rem;
+    padding-left: 12rem;
+    margin-top: 9rem; }
+    .services .section-services .zigzag-container__item-presentation {
+      min-width: none; }
+    .services .section-services .zigzag-container__item-description {
+      min-width: 36%; }
+    .services .section-services .zigzag-container .text-normal--description {
+      max-width: none; }
+
+.services .section-clients {
+  background-color: #2f2c96; }
+  .services .section-clients .notch-title {
+    background-color: #2f2c96; }
+
+.services .section-testimonials {
+  background-color: #FFF7E1;
+  padding: 8rem 0;
+  padding-top: 16rem; }
+  .services .section-testimonials .quote {
+    max-width: 80rem;
+    margin: 0 auto; }
+
 .button {
   border-radius: 50px;
   padding: 0.6rem 1.7rem;
@@ -764,11 +840,16 @@ footer.footer {
   overflow: hidden;
   white-space: nowrap; }
   .logos__slide {
-    display: inline-block;
-    animation: 10s spin linear infinite; }
+    display: inline-block; }
   .logos__image {
     height: 15rem;
     margin: 0 4rem; }
+  .logos--table .logos__slide {
+    display: inline-table;
+    border-collapse: separate;
+    border-spacing: 2.5rem; }
+    .logos--table .logos__slide > * {
+      display: table-cell; }
 
 .form {
   display: flex;
@@ -873,6 +954,35 @@ footer.footer {
   background-color: #00A979;
   color: #FFF;
   padding: 0 2rem; }
+  .quote--orange {
+    background-color: #fa492d; }
+  .quote--round {
+    border-radius: 15px; }
+  .quote--med {
+    padding: 2rem 4rem; }
+    .quote--med .quote__title {
+      font-size: 2.8rem;
+      letter-spacing: 4px;
+      font-weight: 600;
+      text-align: right; }
+    .quote--med .quote__text {
+      font-size: 1.8rem;
+      font-family: 'Helvetica'; }
+    .quote--med .quote__quotee {
+      font-size: 3.2rem;
+      font-weight: 600; }
+    .quote--med .quote__open-quote,
+    .quote--med .quote__close-quote {
+      width: 9rem;
+      height: 9rem; }
+    .quote--med .quote__open-quote {
+      top: -10%;
+      right: 7%; }
+    .quote--med .quote__close-quote {
+      bottom: -10%;
+      right: 7%; }
+    .quote--med .quote__row {
+      padding-bottom: 3rem; }
   .quote__title, .quote__quotee {
     display: inline-block;
     width: 100%;
@@ -897,6 +1007,8 @@ footer.footer {
     margin: 0 auto; }
     .quote__text--center {
       text-align: center; }
+    .quote__text--start {
+      text-align: start; }
   .quote__open-quote, .quote__close-quote {
     position: absolute;
     background-repeat: no-repeat;
@@ -996,6 +1108,73 @@ footer.footer {
     max-height: 50rem;
     object-fit: cover;
     object-position: top; }
+
+.card {
+  display: inline-block;
+  border-radius: 10px;
+  color: #FFF7E1;
+  padding: 3rem;
+  max-width: 28rem; }
+  .card > * {
+    white-space: wrap; }
+  .card__header {
+    text-align: center;
+    min-height: 30%;
+    height: 13rem; }
+  .card__title {
+    font-weight: bold;
+    font-size: 2.8rem;
+    letter-spacing: 3px;
+    text-transform: uppercase; }
+  .card__body {
+    text-align: center; }
+  .card__text {
+    font-family: "Helvetica";
+    font-size: 1.6rem; }
+  .card--orange {
+    background-color: #fa492d; }
+  .card--purple {
+    background-color: #2f2c96; }
+  .card--green {
+    background-color: #00A979; }
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center; }
+    .card-container__row {
+      display: flex;
+      flex-direction: row;
+      align-items: start;
+      justify-content: space-between; }
+      .card-container__row .card {
+        max-width: none; }
+        .card-container__row .card:not(:last-child) {
+          margin-right: 2rem; }
+        .card-container__row .card__header {
+          height: 9rem; }
+      .card-container__row:not(:last-child) {
+        margin-bottom: 4rem; }
+
+.button-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none; }
+  .button-slider__item:not(:last-child) {
+    margin-right: 1rem; }
+  .button-slider__button {
+    border-radius: 50%;
+    width: 2.8rem;
+    height: 2.8rem;
+    outline: none;
+    border: 2px solid #fa492d;
+    background-color: transparent; }
+    .button-slider__button:hover {
+      cursor: pointer; }
+    .button-slider__button--selected {
+      border: 2px solid transparent;
+      background-color: #fa492d; }
 
 .case-study {
   background-image: url(../../img/case-studies/bg-case-study-orange-wave.svg);
