--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -46,7 +46,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     white-space: nowrap;
     text-align: center;
     text-transform: uppercase;
@@ -68,5 +67,31 @@
         font-size:$text-med-small;
         letter-spacing: 3.6px;
         font-weight: bold;
+    }
+
+
+}
+
+.text-normal{
+    display: inline-block;
+
+    &--title{
+        display:inline-block;
+        width: 100%;
+        font-weight: 600;
+        letter-spacing: 6px;
+        padding-bottom: 1rem;
+        font-size:$tex-h2;
+        text-transform: uppercase;
+    }
+
+    &--description{
+        display:inline-block;
+        font-family: 'Helvetica';
+        text-transform: none;
+        line-height: 150%;
+        font-size:$text-small-med-med-med;
+        max-width: 70rem;
+        margin:0 auto;
     }
 }
