--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import './pages/_case-studies.scss';
 @import './pages/_portfolio.scss';
 @import './pages/_services.scss';
+@import './pages/_contact.scss';
 
 @import './components/_button.scss'; 
 @import './components/_menu.scss';              
