--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,11 @@ footer.footer {
     max-width: 70rem;
     margin: 0 auto; }
 
+.text-blog__row {
+  display: block; }
+  .text-blog__row:not(:last-child) {
+    margin-bottom: 3rem; }
+
 .u-center-text {
   text-align: center !important; }
 
@@ -197,11 +202,30 @@ footer.footer {
 .u-padding-top-btm-lg {
   padding: 15rem 0 !important; }
 
+.u-padding-min {
+  padding: 1rem !important; }
+
 .u-ff-helvetica {
   font-family: 'helvetica' !important;
   letter-spacing: 1px !important;
   font-weight: 400 !important;
   font-size: 1.8rem !important; }
+
+.u-center-div {
+  margin: 0 auto !important; }
+
+.u-mw-130 {
+  max-width: 130rem !important; }
+
+.u-inherit-background {
+  background-color: inherit !important; }
+
+.u-round-edges {
+  border-radius: 20px; }
+
+.u-content-layer {
+  position: relative !important;
+  z-index: 20; }
 
 @keyframes spin {
   0% {
@@ -620,6 +644,42 @@ footer.footer {
     right: 0;
     z-index: 10; }
 
+.blog .header {
+  background-color: #00A979;
+  padding-top: 2rem;
+  padding-bottom: 7rem; }
+  .blog .header .menu {
+    align-items: center; }
+
+.blog .section-blog-description {
+  background-color: #FFF7E1;
+  padding: 20rem 0;
+  overflow: hidden; }
+  .blog .section-blog-description .paragraph:not(:last-child) {
+    padding-bottom: 2rem; }
+  .blog .section-blog-description__wave-top-left {
+    position: absolute;
+    top: -17%;
+    left: 0; }
+  .blog .section-blog-description__wave-bottom-right {
+    position: absolute;
+    bottom: -15%;
+    right: 0; }
+
+.blog .section-blog {
+  position: relative;
+  background-color: #00A979;
+  padding-top: 15rem; }
+  .blog .section-blog .content-items__decorative-text::before {
+    border-bottom: 1px solid #2f2c96; }
+  .blog .section-blog .content-items__text {
+    color: #2f2c96; }
+  .blog .section-blog .notch-title {
+    border-radius: 20px; }
+
+.blog .footer {
+  background-color: #00A979; }
+
 .button {
   border-radius: 50px;
   padding: 0.6rem 1.7rem;
@@ -779,6 +839,8 @@ footer.footer {
   border-radius: 8px; }
   .notch-title--green {
     background-color: #00A979; }
+  .notch-title--mid {
+    padding: 2rem 3rem; }
   .notch-title__text {
     display: inline-block;
     text-transform: uppercase;
@@ -786,6 +848,12 @@ footer.footer {
     color: #FFF7E1;
     font-weight: bold;
     letter-spacing: 4px; }
+  .notch-title__text--mid {
+    font-size: 2.6rem; }
+  .notch-title--top-center {
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -60%); }
   .notch-title--top-left {
     top: 0;
     left: 7%;
@@ -960,12 +1028,21 @@ footer.footer {
     font-weight: bold;
     text-transform: uppercase;
     padding-bottom: 1rem; }
+  .paragraph__line {
+    display: inline-block;
+    font-size: inherit;
+    width: 100%; }
   .paragraph__content {
     display: inline-block;
     font-size: 1.6rem;
     letter-spacing: 2px; }
+    .paragraph__content--helvetica {
+      font-size: 1.6rem;
+      font-weight: 400;
+      font-family: 'Helvetica';
+      letter-spacing: 0.64px; }
     .paragraph__content:not(:last-child) {
-      padding-bottom: 2rem; }
+      padding-bottom: 3rem; }
 
 .quote {
   position: relative;
@@ -1047,13 +1124,14 @@ footer.footer {
   position: absolute;
   bottom: 0;
   left: 50%;
-  width: 20%;
+  min-width: 20%;
   padding-bottom: 2rem;
   background-color: inherit;
   border-radius: 0 0 30px 30px;
   text-align: center;
   z-index: 10;
-  transform: translate(-50%, 50%); }
+  transform: translate(-50%, 50%);
+  max-width: 30%; }
   .page-notch__content {
     color: #232427;
     display: inline-block; }
@@ -1065,6 +1143,13 @@ footer.footer {
     letter-spacing: 8px;
     padding-left: 8px;
     width: 100%; }
+  .page-notch__sub-heading {
+    display: inline-block;
+    text-align: center;
+    font-size: 2.8rem;
+    text-transform: uppercase;
+    letter-spacing: 7px;
+    width: 100%; }
   .page-notch__sub-text {
     display: inline-block;
     text-align: center;
@@ -1072,6 +1157,25 @@ footer.footer {
     font-weight: 600;
     letter-spacing: 2px;
     width: 100%; }
+  .page-notch__sup-text {
+    display: inline-block;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    width: 100%;
+    color: #2f2c96;
+    text-transform: uppercase; }
+  .page-notch--med {
+    transform: translate(-50%, 70%); }
+    .page-notch--med .page-notch__heading {
+      font-size: 4rem; }
+    .page-notch--med .page-notch__sub-heading {
+      font-size: 2.4rem; }
+    .page-notch--med .page-notch__sub-text {
+      font-size: 1.8rem; }
+  .page-notch--color-white .page-notch__content {
+    color: #FFF7E1; }
 
 .zigzag-container {
   display: flex;
