--- a/css/style.css
+++ b/css/style.css
@@ -680,6 +680,31 @@ footer.footer {
 .blog .footer {
   background-color: #00A979; }
 
+.testimonials .header {
+  position: relative;
+  background-color: #00A979;
+  padding-top: 5rem;
+  padding-bottom: 5rem; }
+
+.testimonials .section-testimonials {
+  padding: 20rem;
+  background-color: #FFF7E1; }
+
+.testimonials .section-clients {
+  background-color: #2f2c96;
+  padding: 2rem; }
+  .testimonials .section-clients .notch-title {
+    background-color: #2f2c96; }
+
+.testimonials .section-form {
+  padding-top: 0; }
+  .testimonials .section-form__background-top-wave {
+    width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
+    object-position: bottom;
+    margin-bottom: 6rem; }
+
 .button {
   border-radius: 50px;
   padding: 0.6rem 1.7rem;
