--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import './pages/_services.scss';
 @import './pages/_contact.scss';
 @import './pages/_blog.scss';
+@import './pages/_testimonials.scss';
 
 @import './components/_button.scss'; 
 @import './components/_menu.scss';              
